# asset-panda-staff-sync

./: .envrc  .gitignore  Justfile  LICENSE  README.md  devenv.nix  devenv.yaml  pyproject.toml
scripts/: export_staff_records.py
sql/: select_staff.sql
