[project]
name = "asset-panda-staff-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "docopt-ng>=0.9.0",
  "oracledb>=2.4.1",
  "records>=0.6.0",
  "pandas>=2.2.2",
  "click>=8.1.7",
]

[tool.uv]
dev-dependencies = ["ipython>=8.27.0"]

[tool.sqlfluff.core]
dialect = "oracle"
templater = "placeholder"

[tool.sqlfluff.templater.placeholder]
param_style = "colon"
